Disable guest edits in booking step 2